--- a/_modules/polyclonal/polyclonal_collection.html
+++ b/_modules/polyclonal/polyclonal_collection.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.polyclonal_collection &#8212; polyclonal 6.1 documentation</title>
+    <title>polyclonal.polyclonal_collection &#8212; polyclonal 6.3 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
@@ -329,8 +328,34 @@
 <span class="sd">    sequential_integer_sites : bool</span>
 <span class="sd">        Same as for :attr:`~polyclonal.polyclonal.Polyclonal.sequential_integer_sites`,</span>
 <span class="sd">        extracted from :attr:`PolyclonalCollection.models`.</span>
+<span class="sd">    sites : tuple</span>
+<span class="sd">        All sites for which the model is defined.</span>
 <span class="sd">    default_avg_to_plot : {&quot;mean&quot;, &quot;median&quot;}</span>
 <span class="sd">        By default when plotting, plot either &quot;mean&quot; or &quot;median&quot;.</span>
+
+<span class="sd">    Example</span>
+<span class="sd">    -------</span>
+<span class="sd">    Create a toy example collection of two identical models.</span>
+
+<span class="sd">    &gt;&gt;&gt; data_to_fit = pd.DataFrame.from_records(</span>
+<span class="sd">    ...     [(&quot;M3A&quot;, 1, 0), (&quot;K5G&quot;, 1, 1)],</span>
+<span class="sd">    ...     columns=[&quot;aa_substitutions&quot;, &quot;concentration&quot;, &quot;prob_escape&quot;],</span>
+<span class="sd">    ... )</span>
+
+<span class="sd">    &gt;&gt;&gt; models_df = pd.DataFrame(</span>
+<span class="sd">    ...     {</span>
+<span class="sd">    ...         &quot;model&quot;: [</span>
+<span class="sd">    ...             polyclonal.Polyclonal(data_to_fit=data_to_fit, n_epitopes=1),</span>
+<span class="sd">    ...             polyclonal.Polyclonal(data_to_fit=data_to_fit, n_epitopes=1),</span>
+<span class="sd">    ...         ],</span>
+<span class="sd">    ...         &quot;description&quot;: [&quot;model_1&quot;, &quot;model_2&quot;],</span>
+<span class="sd">    ...     }</span>
+<span class="sd">    ... )</span>
+<span class="sd">    &gt;&gt;&gt; model_collection = polyclonal.PolyclonalCollection(</span>
+<span class="sd">    ...     models_df, default_avg_to_plot=&quot;mean&quot;,</span>
+<span class="sd">    ... )</span>
+<span class="sd">    &gt;&gt;&gt; model_collection.sites</span>
+<span class="sd">    (3, 5)</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
 
@@ -362,14 +387,8 @@
             <span class="s2">&quot;epitope_colors&quot;</span><span class="p">,</span>
             <span class="s2">&quot;alphabet&quot;</span><span class="p">,</span>
             <span class="s2">&quot;sequential_integer_sites&quot;</span><span class="p">,</span>
+            <span class="s2">&quot;sites&quot;</span><span class="p">,</span>
         <span class="p">]:</span>
-            <span class="k">for</span> <span class="n">model</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">models</span><span class="p">:</span>
-                <span class="k">if</span> <span class="ow">not</span> <span class="nb">hasattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">attr</span><span class="p">):</span>
-                    <span class="nb">setattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">attr</span><span class="p">,</span> <span class="n">copy</span><span class="o">.</span><span class="n">copy</span><span class="p">(</span><span class="nb">getattr</span><span class="p">(</span><span class="n">model</span><span class="p">,</span> <span class="n">attr</span><span class="p">)))</span>
-                <span class="k">elif</span> <span class="nb">getattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">attr</span><span class="p">)</span> <span class="o">!=</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">model</span><span class="p">,</span> <span class="n">attr</span><span class="p">):</span>
-                    <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">attr</span><span class="si">}</span><span class="s2"> not the same for all models&quot;</span><span class="p">)</span>
-        <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">models</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">.</span><span class="n">sequential_integer_sites</span><span class="p">:</span>
-            <span class="n">attr</span> <span class="o">=</span> <span class="s2">&quot;sites&quot;</span>
             <span class="k">for</span> <span class="n">model</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">models</span><span class="p">:</span>
                 <span class="k">if</span> <span class="ow">not</span> <span class="nb">hasattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">attr</span><span class="p">):</span>
                     <span class="nb">setattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">attr</span><span class="p">,</span> <span class="n">copy</span><span class="o">.</span><span class="n">copy</span><span class="p">(</span><span class="nb">getattr</span><span class="p">(</span><span class="n">model</span><span class="p">,</span> <span class="n">attr</span><span class="p">)))</span>
@@ -1660,7 +1679,7 @@
       &copy;2019--2023.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 6.1.3</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.0.1</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.13</a>
       
     </div>
