--- a/genindex.html
+++ b/genindex.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; polyclonal 6.1 documentation</title>
+    <title>Index &#8212; polyclonal 6.3 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="_static/plot_directive.css" />
@@ -447,14 +446,18 @@
       </ul></li>
       <li><a href="polyclonal.utils.html#polyclonal.utils.shift_mut_site">shift_mut_site() (in module polyclonal.utils)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.site_level_model">site_level_model() (polyclonal.polyclonal.Polyclonal method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.utils.html#polyclonal.utils.site_level_variants">site_level_variants() (in module polyclonal.utils)</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.sites">sites (polyclonal.polyclonal.Polyclonal attribute)</a>
+
+      <ul>
+        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.sites">(polyclonal.polyclonal_collection.PolyclonalCollection attribute)</a>
 </li>
+      </ul></li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.spatial_distances">spatial_distances (polyclonal.polyclonal.Polyclonal attribute)</a>
 </li>
   </ul></td>
@@ -579,7 +582,7 @@
       &copy;2019--2023.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 6.1.3</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.0.1</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.13</a>
       
     </div>
