--- a/_modules/polyclonal/polyclonal_collection.html
+++ b/_modules/polyclonal/polyclonal_collection.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.polyclonal_collection &#8212; polyclonal 6.3 documentation</title>
+    <title>polyclonal.polyclonal_collection &#8212; polyclonal 6.5 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
@@ -341,12 +341,16 @@
 <span class="sd">    ...     [(&quot;M3A&quot;, 1, 0), (&quot;K5G&quot;, 1, 1)],</span>
 <span class="sd">    ...     columns=[&quot;aa_substitutions&quot;, &quot;concentration&quot;, &quot;prob_escape&quot;],</span>
 <span class="sd">    ... )</span>
+<span class="sd">    &gt;&gt;&gt; data_to_fit2 = pd.DataFrame.from_records(</span>
+<span class="sd">    ...     [(&quot;M3A&quot;, 1, 0), (&quot;K5G&quot;, 1, 1), (&quot;L6T&quot;, 1, 0.5)],</span>
+<span class="sd">    ...     columns=[&quot;aa_substitutions&quot;, &quot;concentration&quot;, &quot;prob_escape&quot;],</span>
+<span class="sd">    ... )</span>
 
 <span class="sd">    &gt;&gt;&gt; models_df = pd.DataFrame(</span>
 <span class="sd">    ...     {</span>
 <span class="sd">    ...         &quot;model&quot;: [</span>
 <span class="sd">    ...             polyclonal.Polyclonal(data_to_fit=data_to_fit, n_epitopes=1),</span>
-<span class="sd">    ...             polyclonal.Polyclonal(data_to_fit=data_to_fit, n_epitopes=1),</span>
+<span class="sd">    ...             polyclonal.Polyclonal(data_to_fit=data_to_fit2, n_epitopes=1),</span>
 <span class="sd">    ...         ],</span>
 <span class="sd">    ...         &quot;description&quot;: [&quot;model_1&quot;, &quot;model_2&quot;],</span>
 <span class="sd">    ...     }</span>
@@ -355,7 +359,7 @@
 <span class="sd">    ...     models_df, default_avg_to_plot=&quot;mean&quot;,</span>
 <span class="sd">    ... )</span>
 <span class="sd">    &gt;&gt;&gt; model_collection.sites</span>
-<span class="sd">    (3, 5)</span>
+<span class="sd">    (3, 5, 6)</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
 
@@ -382,18 +386,24 @@
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;some models have the same descriptors&quot;</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">model_descriptors</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="n">descriptors_df</span><span class="o">.</span><span class="n">to_dict</span><span class="p">(</span><span class="n">orient</span><span class="o">=</span><span class="s2">&quot;index&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">values</span><span class="p">())</span>
 
-        <span class="k">for</span> <span class="n">attr</span> <span class="ow">in</span> <span class="p">[</span>
+        <span class="n">shared_attrs</span> <span class="o">=</span> <span class="p">[</span>
             <span class="s2">&quot;epitopes&quot;</span><span class="p">,</span>
             <span class="s2">&quot;epitope_colors&quot;</span><span class="p">,</span>
             <span class="s2">&quot;alphabet&quot;</span><span class="p">,</span>
             <span class="s2">&quot;sequential_integer_sites&quot;</span><span class="p">,</span>
-            <span class="s2">&quot;sites&quot;</span><span class="p">,</span>
-        <span class="p">]:</span>
+        <span class="p">]</span>
+        <span class="k">if</span> <span class="nb">all</span><span class="p">(</span><span class="ow">not</span> <span class="n">model</span><span class="o">.</span><span class="n">sequential_integer_sites</span> <span class="k">for</span> <span class="n">model</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">models</span><span class="p">):</span>
+            <span class="n">shared_attrs</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="s2">&quot;sites&quot;</span><span class="p">)</span>
+        <span class="k">for</span> <span class="n">attr</span> <span class="ow">in</span> <span class="n">shared_attrs</span><span class="p">:</span>
             <span class="k">for</span> <span class="n">model</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">models</span><span class="p">:</span>
                 <span class="k">if</span> <span class="ow">not</span> <span class="nb">hasattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">attr</span><span class="p">):</span>
                     <span class="nb">setattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">attr</span><span class="p">,</span> <span class="n">copy</span><span class="o">.</span><span class="n">copy</span><span class="p">(</span><span class="nb">getattr</span><span class="p">(</span><span class="n">model</span><span class="p">,</span> <span class="n">attr</span><span class="p">)))</span>
                 <span class="k">elif</span> <span class="nb">getattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">attr</span><span class="p">)</span> <span class="o">!=</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">model</span><span class="p">,</span> <span class="n">attr</span><span class="p">):</span>
                     <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">attr</span><span class="si">}</span><span class="s2"> not the same for all models&quot;</span><span class="p">)</span>
+        <span class="k">if</span> <span class="s2">&quot;sites&quot;</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">shared_attrs</span><span class="p">:</span>
+            <span class="n">sites</span> <span class="o">=</span> <span class="nb">sorted</span><span class="p">(</span><span class="nb">set</span><span class="p">()</span><span class="o">.</span><span class="n">union</span><span class="p">(</span><span class="o">*</span><span class="p">[</span><span class="n">model</span><span class="o">.</span><span class="n">sites</span> <span class="k">for</span> <span class="n">model</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">models</span><span class="p">]))</span>
+            <span class="k">assert</span> <span class="nb">all</span><span class="p">(</span><span class="nb">type</span><span class="p">(</span><span class="n">r</span><span class="p">)</span> <span class="o">==</span> <span class="nb">int</span> <span class="k">for</span> <span class="n">r</span> <span class="ow">in</span> <span class="n">sites</span><span class="p">),</span> <span class="n">sites</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">sites</span> <span class="o">=</span> <span class="nb">tuple</span><span class="p">(</span><span class="n">sites</span><span class="p">)</span>
 
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">activity_wt_df_replicates</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
@@ -1039,10 +1049,10 @@
         <span class="n">x</span><span class="o">=</span><span class="mf">0.9</span><span class="p">,</span>
         <span class="n">icXX_col</span><span class="o">=</span><span class="s2">&quot;IC90&quot;</span><span class="p">,</span>
         <span class="n">log_fold_change_icXX_col</span><span class="o">=</span><span class="s2">&quot;log2 fold change IC90&quot;</span><span class="p">,</span>
-        <span class="n">min_c</span><span class="o">=</span><span class="mf">1e-7</span><span class="p">,</span>
-        <span class="n">max_c</span><span class="o">=</span><span class="mf">1e7</span><span class="p">,</span>
+        <span class="n">min_c</span><span class="o">=</span><span class="mf">1e-8</span><span class="p">,</span>
+        <span class="n">max_c</span><span class="o">=</span><span class="mf">1e8</span><span class="p">,</span>
         <span class="n">logbase</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span>
-        <span class="n">check_wt_icXX</span><span class="o">=</span><span class="p">(</span><span class="mf">1e-4</span><span class="p">,</span> <span class="mf">1e4</span><span class="p">),</span>
+        <span class="n">check_wt_icXX</span><span class="o">=</span><span class="p">(</span><span class="mf">1e-5</span><span class="p">,</span> <span class="mf">1e5</span><span class="p">),</span>
         <span class="n">biochem_order_aas</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
         <span class="n">df_to_merge</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
         <span class="n">positive_color</span><span class="o">=</span><span class="n">polyclonal</span><span class="o">.</span><span class="n">plot</span><span class="o">.</span><span class="n">DEFAULT_POSITIVE_COLORS</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span>
