--- a/_modules/polyclonal/plot.html
+++ b/_modules/polyclonal/plot.html
@@ -1,18 +1,16 @@
-
 <!DOCTYPE html>
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.plot &#8212; polyclonal 6.0 documentation</title>
+    <title>polyclonal.plot &#8212; polyclonal 6.6 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
     <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-    <script src="../../_static/jquery.js"></script>
-    <script src="../../_static/underscore.js"></script>
     <script src="../../_static/doctools.js"></script>
+    <script src="../../_static/sphinx_highlight.js"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
@@ -74,7 +72,7 @@
 
 
 <div class="viewcode-block" id="color_gradient_hex"><a class="viewcode-back" href="../../polyclonal.plot.html#polyclonal.plot.color_gradient_hex">[docs]</a><span class="k">def</span> <span class="nf">color_gradient_hex</span><span class="p">(</span><span class="n">start</span><span class="p">,</span> <span class="n">end</span><span class="p">,</span> <span class="n">n</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Get a list of colors linearly spanning a range.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Get a list of colors linearly spanning a range.</span>
 
 <span class="sd">    Parameters</span>
 <span class="sd">    ----------</span>
@@ -112,7 +110,7 @@
     <span class="n">width</span><span class="o">=</span><span class="mi">110</span><span class="p">,</span>
     <span class="n">height_per_bar</span><span class="o">=</span><span class="mi">25</span><span class="p">,</span>
 <span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;Bar plot of activity against each epitope, :math:`a_{\rm{wt},e}`.</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;Bar plot of activity against each epitope, :math:`a_{\rm{wt},e}`.</span>
 
 <span class="sd">    Parameters</span>
 <span class="sd">    ----------</span>
@@ -204,7 +202,7 @@
     <span class="n">replicate_col</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
     <span class="n">weighted_replicates</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
 <span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;Plot Hill curves.</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;Plot Hill curves.</span>
 
 <span class="sd">    The curves are defined by</span>
 <span class="sd">    :math:`U_e = \frac{1 - t_e}{1 + \left[c \exp \left(a_e\right)\right]^{n_e}} + t_e`</span>
@@ -379,7 +377,7 @@
     <span class="n">diverging_colors</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
     <span class="n">scheme</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
 <span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Plot a correlation matrix as heat map from a tidy data frame of correlations.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Plot a correlation matrix as heat map from a tidy data frame of correlations.</span>
 
 <span class="sd">    Parameters</span>
 <span class="sd">    ----------</span>
@@ -518,7 +516,7 @@
     <span class="n">rename_stat_col</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
     <span class="n">sites_to_show</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
 <span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Lineplots and heatmaps of per-site and per-mutation values.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Lineplots and heatmaps of per-site and per-mutation values.</span>
 
 <span class="sd">    Parameters</span>
 <span class="sd">    ----------</span>
@@ -666,13 +664,23 @@
     <span class="k">if</span> <span class="ow">not</span> <span class="n">heatmap_negative_color</span><span class="p">:</span>
         <span class="n">heatmap_negative_color</span> <span class="o">=</span> <span class="n">DEFAULT_NEGATIVE_COLOR</span>
 
-    <span class="n">no_na_cols</span> <span class="o">=</span> <span class="n">basic_req_cols</span> <span class="o">+</span> <span class="p">(</span>
-        <span class="p">[</span><span class="n">site_zoom_bar_color_col</span><span class="p">]</span> <span class="k">if</span> <span class="n">site_zoom_bar_color_col</span> <span class="k">else</span> <span class="p">[]</span>
-    <span class="p">)</span>
-    <span class="k">if</span> <span class="n">data_df</span><span class="p">[</span><span class="n">no_na_cols</span><span class="p">]</span><span class="o">.</span><span class="n">isnull</span><span class="p">()</span><span class="o">.</span><span class="n">any</span><span class="p">()</span><span class="o">.</span><span class="n">any</span><span class="p">():</span>
-        <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
-            <span class="sa">f</span><span class="s2">&quot;`data_df` has NA values in key cols:</span><span class="se">\n</span><span class="si">{</span><span class="n">data_df</span><span class="p">[</span><span class="n">no_na_cols</span><span class="p">]</span><span class="o">.</span><span class="n">isnull</span><span class="p">()</span><span class="o">.</span><span class="n">any</span><span class="p">()</span><span class="si">}</span><span class="s2">&quot;</span>
+    <span class="c1"># drop rows not defined for site, mutant, and category (eg, epitope)</span>
+    <span class="n">data_df</span> <span class="o">=</span> <span class="n">data_df</span><span class="p">[</span>
+        <span class="n">functools</span><span class="o">.</span><span class="n">reduce</span><span class="p">(</span>
+            <span class="n">operator</span><span class="o">.</span><span class="n">and_</span><span class="p">,</span>
+            <span class="p">[</span><span class="n">data_df</span><span class="p">[</span><span class="n">c</span><span class="p">]</span><span class="o">.</span><span class="n">notnull</span><span class="p">()</span> <span class="k">for</span> <span class="n">c</span> <span class="ow">in</span> <span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">,</span> <span class="s2">&quot;mutant&quot;</span><span class="p">,</span> <span class="n">category_col</span><span class="p">]],</span>
         <span class="p">)</span>
+    <span class="p">]</span>
+    <span class="c1"># not defined for one of the stats or one of the hiding columns</span>
+    <span class="n">data_df</span> <span class="o">=</span> <span class="n">data_df</span><span class="p">[</span>
+        <span class="n">functools</span><span class="o">.</span><span class="n">reduce</span><span class="p">(</span>
+            <span class="n">operator</span><span class="o">.</span><span class="n">or_</span><span class="p">,</span>
+            <span class="p">[</span>
+                <span class="n">data_df</span><span class="p">[</span><span class="n">c</span><span class="p">]</span><span class="o">.</span><span class="n">notnull</span><span class="p">()</span>
+                <span class="k">for</span> <span class="n">c</span> <span class="ow">in</span> <span class="p">[</span><span class="n">stat_col</span><span class="p">,</span> <span class="o">*</span><span class="n">addtl_slider_stats_hide_not_filter</span><span class="p">]</span>
+            <span class="p">],</span>
+        <span class="p">)</span>
+    <span class="p">]</span>
 
     <span class="k">if</span> <span class="n">alphabet</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
         <span class="n">alphabet</span> <span class="o">=</span> <span class="n">natsort</span><span class="o">.</span><span class="n">natsorted</span><span class="p">(</span><span class="n">data_df</span><span class="p">[</span><span class="s2">&quot;mutant&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">unique</span><span class="p">())</span>
@@ -778,11 +786,42 @@
         <span class="n">mark</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">BrushConfig</span><span class="p">(</span><span class="n">stroke</span><span class="o">=</span><span class="s2">&quot;black&quot;</span><span class="p">,</span> <span class="n">strokeWidth</span><span class="o">=</span><span class="mi">2</span><span class="p">),</span>
     <span class="p">)</span>
     <span class="k">if</span> <span class="n">site_zoom_bar_color_col</span><span class="p">:</span>
-        <span class="n">site_zoom_bar_df</span> <span class="o">=</span> <span class="n">data_df</span><span class="p">[</span>
-            <span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">,</span> <span class="s2">&quot;_stat_site_order&quot;</span><span class="p">,</span> <span class="n">site_zoom_bar_color_col</span><span class="p">]</span>
-        <span class="p">]</span><span class="o">.</span><span class="n">drop_duplicates</span><span class="p">()</span>
+        <span class="k">assert</span> <span class="n">site_zoom_bar_color_col</span> <span class="ow">not</span> <span class="ow">in</span> <span class="p">{</span><span class="s2">&quot;_n&quot;</span><span class="p">,</span> <span class="s2">&quot;_drop&quot;</span><span class="p">},</span> <span class="n">site_zoom_bar_color_col</span>
+        <span class="n">site_zoom_bar_df</span> <span class="o">=</span> <span class="p">(</span>
+            <span class="n">data_df</span><span class="p">[[</span><span class="s2">&quot;site&quot;</span><span class="p">,</span> <span class="s2">&quot;_stat_site_order&quot;</span><span class="p">,</span> <span class="n">site_zoom_bar_color_col</span><span class="p">]]</span>
+            <span class="o">.</span><span class="n">drop_duplicates</span><span class="p">()</span>
+            <span class="o">.</span><span class="n">assign</span><span class="p">(</span>
+                <span class="n">_n</span><span class="o">=</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="p">(</span>
+                    <span class="n">x</span><span class="o">.</span><span class="n">groupby</span><span class="p">(</span><span class="s2">&quot;site&quot;</span><span class="p">)[</span><span class="n">site_zoom_bar_color_col</span><span class="p">]</span><span class="o">.</span><span class="n">transform</span><span class="p">(</span><span class="s2">&quot;size&quot;</span><span class="p">)</span>
+                <span class="p">),</span>
+                <span class="n">_drop</span><span class="o">=</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="p">(</span>
+                    <span class="n">x</span><span class="p">[</span><span class="n">site_zoom_bar_color_col</span><span class="p">]</span>
+                    <span class="o">.</span><span class="n">isnull</span><span class="p">()</span>
+                    <span class="o">.</span><span class="n">where</span><span class="p">(</span>
+                        <span class="n">x</span><span class="p">[</span><span class="s2">&quot;_n&quot;</span><span class="p">]</span> <span class="o">&gt;</span> <span class="mi">1</span><span class="p">,</span>
+                        <span class="kc">False</span><span class="p">,</span>
+                    <span class="p">)</span>
+                <span class="p">),</span>
+            <span class="p">)</span>
+            <span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="s2">&quot;not _drop&quot;</span><span class="p">)</span>
+            <span class="o">.</span><span class="n">drop</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;_n&quot;</span><span class="p">,</span> <span class="s2">&quot;_drop&quot;</span><span class="p">])</span>
+        <span class="p">)</span>
+        <span class="n">site_zoom_bar_df</span><span class="p">[</span><span class="n">site_zoom_bar_color_col</span><span class="p">]</span> <span class="o">=</span> <span class="n">site_zoom_bar_df</span><span class="p">[</span>
+            <span class="n">site_zoom_bar_color_col</span>
+        <span class="p">]</span><span class="o">.</span><span class="n">fillna</span><span class="p">(</span><span class="s2">&quot;null&quot;</span><span class="p">)</span>
         <span class="k">if</span> <span class="nb">any</span><span class="p">(</span><span class="n">site_zoom_bar_df</span><span class="o">.</span><span class="n">groupby</span><span class="p">(</span><span class="s2">&quot;site&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">size</span><span class="p">()</span> <span class="o">&gt;</span> <span class="mi">1</span><span class="p">):</span>
-            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;multiple </span><span class="si">{</span><span class="n">site_zoom_bar_color_col</span><span class="si">=}</span><span class="s2"> values for sites&quot;</span><span class="p">)</span>
+            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
+                <span class="sa">f</span><span class="s2">&quot;multiple </span><span class="si">{</span><span class="n">site_zoom_bar_color_col</span><span class="si">=}</span><span class="s2"> values for sites:&quot;</span>
+                <span class="o">+</span> <span class="nb">str</span><span class="p">(</span>
+                    <span class="n">site_zoom_bar_df</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span>
+                        <span class="n">n</span><span class="o">=</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="p">(</span>
+                            <span class="n">x</span><span class="o">.</span><span class="n">groupby</span><span class="p">(</span><span class="s2">&quot;site&quot;</span><span class="p">)[</span><span class="n">site_zoom_bar_color_col</span><span class="p">]</span><span class="o">.</span><span class="n">transform</span><span class="p">(</span><span class="s2">&quot;size&quot;</span><span class="p">)</span>
+                        <span class="p">),</span>
+                    <span class="p">)</span>
+                    <span class="o">.</span><span class="n">sort_values</span><span class="p">(</span><span class="s2">&quot;n&quot;</span><span class="p">,</span> <span class="n">ascending</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span>
+                    <span class="o">.</span><span class="n">reset_index</span><span class="p">(</span><span class="n">drop</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+                <span class="p">)</span>
+            <span class="p">)</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="n">site_zoom_bar_df</span> <span class="o">=</span> <span class="n">data_df</span><span class="p">[[</span><span class="s2">&quot;site&quot;</span><span class="p">,</span> <span class="s2">&quot;_stat_site_order&quot;</span><span class="p">]]</span><span class="o">.</span><span class="n">drop_duplicates</span><span class="p">()</span>
     <span class="n">site_zoom_bar</span> <span class="o">=</span> <span class="p">(</span>
@@ -1212,7 +1251,7 @@
     </form>
     </div>
 </div>
-<script>$('#searchbox').show(0);</script>
+<script>document.getElementById('searchbox').style.display = "block"</script>
 
 
 
@@ -1229,8 +1268,8 @@
       &copy;2019--2023.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 4.2.0</a>
-      &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.12</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.0.1</a>
+      &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.13</a>
       
     </div>
 
