docs for version 6.9

--- a/_modules/polyclonal/plot.html
+++ b/_modules/polyclonal/plot.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.plot &#8212; polyclonal 6.8 documentation</title>
+    <title>polyclonal.plot &#8212; polyclonal 6.9 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=b76e3c8a" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css?v=fed019e6" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css?v=7f9a90b1" />
-    <script src="../../_static/documentation_options.js?v=5f6cf160"></script>
+    <script src="../../_static/documentation_options.js?v=fb147579"></script>
     <script src="../../_static/doctools.js?v=888ff710"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
@@ -530,6 +530,7 @@
     <span class="n">show_heatmap</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">scale_stat_col</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span>
     <span class="n">rename_stat_col</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
+    <span class="n">rename_std</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">sites_to_show</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
 <span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Lineplots and heatmaps of per-site and per-mutation values.</span>
@@ -627,6 +628,9 @@
 <span class="sd">        Multiply numbers in `stat_col` by this number before plotting.</span>
 <span class="sd">    rename_stat_col : None or str</span>
 <span class="sd">        If a str, rename `stat_col` to this. Also changes y-axis labels.</span>
+<span class="sd">    rename_std : bool</span>
+<span class="sd">        If ``rename_stat_col`` is ``True``, rename any column named ``&lt;stat_col&gt;_std``</span>
+<span class="sd">        to ``&lt;rename_stat_col&gt;_std``.</span>
 <span class="sd">    sites_to_show : None or dict</span>
 <span class="sd">        If `None`, all sites are shown. If a dict, can be keyed by &quot;include_range&quot;</span>
 <span class="sd">        (value a 2-tuple giving first and last site to include, inclusive),</span>
@@ -637,13 +641,6 @@
 <span class="sd">    altair.Chart</span>
 <span class="sd">        Interactive plot.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">if</span> <span class="n">rename_stat_col</span><span class="p">:</span>
-        <span class="k">if</span> <span class="n">rename_stat_col</span> <span class="ow">in</span> <span class="n">data_df</span><span class="o">.</span><span class="n">columns</span><span class="p">:</span>
-            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">rename_stat_col</span><span class="si">=}</span><span class="s2"> already in </span><span class="si">{</span><span class="n">data_df</span><span class="o">.</span><span class="n">columns</span><span class="si">=}</span><span class="s2">&quot;</span><span class="p">)</span>
-        <span class="n">data_df</span> <span class="o">=</span> <span class="n">data_df</span><span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="p">{</span><span class="n">stat_col</span><span class="p">:</span> <span class="n">rename_stat_col</span><span class="p">})</span>
-        <span class="n">stat_col</span> <span class="o">=</span> <span class="n">rename_stat_col</span>
-
-    <span class="n">basic_req_cols</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">,</span> <span class="s2">&quot;wildtype&quot;</span><span class="p">,</span> <span class="s2">&quot;mutant&quot;</span><span class="p">,</span> <span class="n">stat_col</span><span class="p">,</span> <span class="n">category_col</span><span class="p">]</span>
     <span class="k">if</span> <span class="n">addtl_tooltip_stats</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
         <span class="n">addtl_tooltip_stats</span> <span class="o">=</span> <span class="p">[]</span>
     <span class="k">if</span> <span class="n">addtl_slider_stats</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
@@ -659,6 +656,40 @@
     <span class="n">addtl_slider_stats_hide_not_filter</span> <span class="o">=</span> <span class="nb">set</span><span class="p">(</span><span class="n">addtl_slider_stats</span><span class="p">)</span><span class="o">.</span><span class="n">intersection</span><span class="p">(</span>
         <span class="n">addtl_slider_stats_hide_not_filter</span>
     <span class="p">)</span>
+
+    <span class="k">if</span> <span class="n">rename_stat_col</span><span class="p">:</span>
+        <span class="k">if</span> <span class="n">rename_stat_col</span> <span class="ow">in</span> <span class="n">data_df</span><span class="o">.</span><span class="n">columns</span><span class="p">:</span>
+            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">rename_stat_col</span><span class="si">=}</span><span class="s2"> already in </span><span class="si">{</span><span class="n">data_df</span><span class="o">.</span><span class="n">columns</span><span class="si">=}</span><span class="s2">&quot;</span><span class="p">)</span>
+        <span class="n">data_df</span> <span class="o">=</span> <span class="n">data_df</span><span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="p">{</span><span class="n">stat_col</span><span class="p">:</span> <span class="n">rename_stat_col</span><span class="p">})</span>
+        <span class="n">std_col</span> <span class="o">=</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">stat_col</span><span class="si">}</span><span class="s2">_std&quot;</span>
+        <span class="n">stat_col</span> <span class="o">=</span> <span class="n">rename_stat_col</span>
+        <span class="k">if</span> <span class="n">rename_std</span><span class="p">:</span>
+            <span class="n">rename_std_col</span> <span class="o">=</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">rename_stat_col</span><span class="si">}</span><span class="s2">_std&quot;</span>
+            <span class="k">if</span> <span class="n">std_col</span> <span class="ow">in</span> <span class="nb">set</span><span class="p">(</span><span class="n">data_df</span><span class="o">.</span><span class="n">columns</span><span class="p">):</span>
+                <span class="k">if</span> <span class="n">rename_std_col</span> <span class="ow">in</span> <span class="nb">set</span><span class="p">(</span><span class="n">data_df</span><span class="o">.</span><span class="n">columns</span><span class="p">):</span>
+                    <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
+                        <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">data_df</span><span class="o">.</span><span class="n">columns</span><span class="si">=}</span><span class="s2"> has both </span><span class="si">{</span><span class="n">std_col</span><span class="si">=}</span><span class="s2"> and </span><span class="si">{</span><span class="n">rename_std_col</span><span class="si">=}</span><span class="s2">&quot;</span>
+                    <span class="p">)</span>
+                <span class="n">data_df</span> <span class="o">=</span> <span class="n">data_df</span><span class="o">.</span><span class="n">rename</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="p">{</span><span class="n">std_col</span><span class="p">:</span> <span class="n">rename_std_col</span><span class="p">})</span>
+                <span class="k">if</span> <span class="n">std_col</span> <span class="ow">in</span> <span class="n">addtl_slider_stats</span><span class="p">:</span>
+                    <span class="n">addtl_slider_stats</span><span class="p">[</span><span class="n">rename_std_col</span><span class="p">]</span> <span class="o">=</span> <span class="n">addtl_slider_stats</span><span class="p">[</span><span class="n">std_col</span><span class="p">]</span>
+                    <span class="k">del</span> <span class="n">addtl_slider_stats</span><span class="p">[</span><span class="n">std_col</span><span class="p">]</span>
+
+                <span class="k">def</span> <span class="nf">replace_std</span><span class="p">(</span><span class="n">col</span><span class="p">):</span>
+                    <span class="k">if</span> <span class="n">col</span> <span class="o">==</span> <span class="n">std_col</span><span class="p">:</span>
+                        <span class="k">return</span> <span class="n">rename_std_col</span>
+                    <span class="k">else</span><span class="p">:</span>
+                        <span class="k">return</span> <span class="n">col</span>
+
+                <span class="n">addtl_tooltip_stats</span> <span class="o">=</span> <span class="p">[</span><span class="n">replace_std</span><span class="p">(</span><span class="n">c</span><span class="p">)</span> <span class="k">for</span> <span class="n">c</span> <span class="ow">in</span> <span class="n">addtl_tooltip_stats</span><span class="p">]</span>
+                <span class="n">addtl_slider_stats_as_max</span> <span class="o">=</span> <span class="p">[</span>
+                    <span class="n">replace_std</span><span class="p">(</span><span class="n">c</span><span class="p">)</span> <span class="k">for</span> <span class="n">c</span> <span class="ow">in</span> <span class="n">addtl_slider_stats_as_max</span>
+                <span class="p">]</span>
+                <span class="n">addtl_slider_stats_hide_not_filter</span> <span class="o">=</span> <span class="p">[</span>
+                    <span class="n">replace_std</span><span class="p">(</span><span class="n">c</span><span class="p">)</span> <span class="k">for</span> <span class="n">c</span> <span class="ow">in</span> <span class="n">addtl_slider_stats_hide_not_filter</span>
+                <span class="p">]</span>
+
+    <span class="n">basic_req_cols</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">,</span> <span class="s2">&quot;wildtype&quot;</span><span class="p">,</span> <span class="s2">&quot;mutant&quot;</span><span class="p">,</span> <span class="n">stat_col</span><span class="p">,</span> <span class="n">category_col</span><span class="p">]</span>
     <span class="n">req_cols</span> <span class="o">=</span> <span class="n">basic_req_cols</span> <span class="o">+</span> <span class="n">addtl_tooltip_stats</span> <span class="o">+</span> <span class="nb">list</span><span class="p">(</span><span class="n">addtl_slider_stats</span><span class="p">)</span>
     <span class="k">if</span> <span class="n">site_zoom_bar_color_col</span><span class="p">:</span>
         <span class="n">req_cols</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">site_zoom_bar_color_col</span><span class="p">)</span>
