docs for version 6.11

--- a/polyclonal.plot.html
+++ b/polyclonal.plot.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>plot &#8212; polyclonal 6.10 documentation</title>
+    <title>plot &#8212; polyclonal 6.11 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=b76e3c8a" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css?v=fed019e6" />
     <link rel="stylesheet" type="text/css" href="_static/plot_directive.css?v=7f9a90b1" />
-    <script src="_static/documentation_options.js?v=c2801b12"></script>
+    <script src="_static/documentation_options.js?v=66f89f0b"></script>
     <script src="_static/doctools.js?v=888ff710"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
@@ -230,7 +230,7 @@ add names of stats to this list. Mutations that fail one of these hiding filters
 are always shown as hidden on the heat map rather than fully excluded, even if
 they fail other filters in <cite>addtl_slider_stats</cite>.</p></li>
 <li><p><strong>init_floor_at_zero</strong> (<em>bool</em>) – Initial value for option to put floor of zero on value is <cite>stat_col</cite>.</p></li>
-<li><p><strong>init_site_statistic</strong> (<em>{'sum'</em><em>, </em><em>'mean'</em><em>, </em><em>'max'</em><em>, </em><em>'min'}</em>) – Initial value for site statistic in lineplot, calculated from <cite>stat_col</cite>.</p></li>
+<li><p><strong>init_site_statistic</strong> (<em>{'sum'</em><em>, </em><em>'mean'</em><em>, </em><em>'max'</em><em>, </em><em>'min'</em><em>, </em><em>'mean_abs'</em><em>, </em><em>'sum_abs'}</em>) – Initial value for site statistic in lineplot, calculated from <cite>stat_col</cite>.</p></li>
 <li><p><strong>cell_size</strong> (<em>float</em>) – Size of cells in heatmap</p></li>
 <li><p><strong>lineplot_width</strong> (<em>float</em><em> or </em><em>None</em>) – Overall width of lineplot.</p></li>
 <li><p><strong>lineplot_height</strong> (<em>float</em>) – Height of line plot.</p></li>
