--- a/_modules/polyclonal/plot.html
+++ b/_modules/polyclonal/plot.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.plot &#8212; polyclonal 6.10 documentation</title>
+    <title>polyclonal.plot &#8212; polyclonal 6.11 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=b76e3c8a" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css?v=fed019e6" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css?v=7f9a90b1" />
-    <script src="../../_static/documentation_options.js?v=c2801b12"></script>
+    <script src="../../_static/documentation_options.js?v=66f89f0b"></script>
     <script src="../../_static/doctools.js?v=888ff710"></script>
     <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
@@ -567,7 +567,7 @@
 <span class="sd">        they fail other filters in `addtl_slider_stats`.</span>
 <span class="sd">    init_floor_at_zero : bool</span>
 <span class="sd">        Initial value for option to put floor of zero on value is `stat_col`.</span>
-<span class="sd">    init_site_statistic : {&#39;sum&#39;, &#39;mean&#39;, &#39;max&#39;, &#39;min&#39;}</span>
+<span class="sd">    init_site_statistic : {&#39;sum&#39;, &#39;mean&#39;, &#39;max&#39;, &#39;min&#39;, &#39;mean_abs&#39;, &#39;sum_abs&#39;}</span>
 <span class="sd">        Initial value for site statistic in lineplot, calculated from `stat_col`.</span>
 <span class="sd">    cell_size : float</span>
 <span class="sd">        Size of cells in heatmap</span>
@@ -641,6 +641,7 @@
 <span class="sd">    -------</span>
 <span class="sd">    altair.Chart</span>
 <span class="sd">        Interactive plot.</span>
+
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">addtl_tooltip_stats</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
         <span class="n">addtl_tooltip_stats</span> <span class="o">=</span> <span class="p">[]</span>
@@ -1025,7 +1026,7 @@
     <span class="p">)</span>
 
     <span class="c1"># make the site chart</span>
-    <span class="n">site_statistics</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;sum&quot;</span><span class="p">,</span> <span class="s2">&quot;mean&quot;</span><span class="p">,</span> <span class="s2">&quot;max&quot;</span><span class="p">,</span> <span class="s2">&quot;min&quot;</span><span class="p">]</span>
+    <span class="n">site_statistics</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;sum&quot;</span><span class="p">,</span> <span class="s2">&quot;mean&quot;</span><span class="p">,</span> <span class="s2">&quot;max&quot;</span><span class="p">,</span> <span class="s2">&quot;min&quot;</span><span class="p">,</span> <span class="s2">&quot;sum_abs&quot;</span><span class="p">,</span> <span class="s2">&quot;mean_abs&quot;</span><span class="p">]</span>
     <span class="k">if</span> <span class="n">init_site_statistic</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">site_statistics</span><span class="p">:</span>
         <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;invalid </span><span class="si">{</span><span class="n">init_site_statistic</span><span class="si">=}</span><span class="s2">&quot;</span><span class="p">)</span>
     <span class="k">if</span> <span class="nb">set</span><span class="p">(</span><span class="n">site_statistics</span><span class="p">)</span><span class="o">.</span><span class="n">intersection</span><span class="p">(</span><span class="n">req_cols</span><span class="p">):</span>
@@ -1045,8 +1046,15 @@
         <span class="n">base_chart</span><span class="o">.</span><span class="n">transform_filter</span><span class="p">(</span>
             <span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="o">.</span><span class="n">wildtype</span> <span class="o">!=</span> <span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="o">.</span><span class="n">mutant</span><span class="p">)</span> <span class="o">&amp;</span> <span class="o">~</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="s2">&quot;_stat_hide&quot;</span><span class="p">]</span>
         <span class="p">)</span>
+        <span class="o">.</span><span class="n">transform_calculate</span><span class="p">(</span><span class="n">_stat_abs</span><span class="o">=</span><span class="n">alt</span><span class="o">.</span><span class="n">expr</span><span class="o">.</span><span class="n">abs</span><span class="p">(</span><span class="n">alt</span><span class="o">.</span><span class="n">datum</span><span class="p">[</span><span class="s2">&quot;_stat&quot;</span><span class="p">]))</span>
         <span class="o">.</span><span class="n">transform_aggregate</span><span class="p">(</span>
-            <span class="o">**</span><span class="p">{</span><span class="sa">f</span><span class="s2">&quot;_stat_</span><span class="si">{</span><span class="n">stat</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">:</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">stat</span><span class="si">}</span><span class="s2">(_stat)&quot;</span> <span class="k">for</span> <span class="n">stat</span> <span class="ow">in</span> <span class="n">site_statistics</span><span class="p">},</span>
+            <span class="o">**</span><span class="p">{</span>
+                <span class="sa">f</span><span class="s2">&quot;_stat_</span><span class="si">{</span><span class="n">stat</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">:</span> <span class="p">(</span>
+                    <span class="n">stat</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s2">&quot;_&quot;</span><span class="p">)[</span><span class="mi">0</span><span class="p">]</span>
+                    <span class="o">+</span> <span class="sa">f</span><span class="s2">&quot;(</span><span class="si">{</span><span class="s1">&#39;_stat_abs&#39;</span><span class="w"> </span><span class="k">if</span><span class="w"> </span><span class="n">stat</span><span class="o">.</span><span class="n">endswith</span><span class="p">(</span><span class="s1">&#39;_abs&#39;</span><span class="p">)</span><span class="w"> </span><span class="k">else</span><span class="w"> </span><span class="s1">&#39;_stat&#39;</span><span class="si">}</span><span class="s2">)&quot;</span>
+                <span class="p">)</span>
+                <span class="k">for</span> <span class="n">stat</span> <span class="ow">in</span> <span class="n">site_statistics</span>
+            <span class="p">},</span>
             <span class="n">groupby</span><span class="o">=</span><span class="p">[</span><span class="o">*</span><span class="n">site_prop_cols</span><span class="p">,</span> <span class="n">category_col</span><span class="p">],</span>
         <span class="p">)</span>
         <span class="o">.</span><span class="n">transform_fold</span><span class="p">(</span>
